--- a/package.json
+++ b/package.json
@@ -5,15 +5,44 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
-    "@nrwl/cli": "14.5.10",
+    "@nrwl/cli": "14.7.3",
+    "@nrwl/eslint-plugin-nx": "14.7.3",
+    "@nrwl/express": "^14.7.3",
+    "@nrwl/jest": "14.7.3",
+    "@nrwl/linter": "14.7.3",
+    "@nrwl/node": "^14.7.3",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.5.10",
-    "@nxrs/cargo": "^0.3.3",
-    "nx": "14.5.10",
+    "@nrwl/workspace": "14.7.3",
+    "@trpc/client": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "@types/express": "^4.17.13",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@types/node-fetch": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "~5.33.1",
+    "@typescript-eslint/parser": "~5.33.1",
+    "abort-controller": "^3.0.0",
+    "dotenv": "^16.0.2",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "express": "^4.18.1",
+    "grammy": "^1.11.0",
+    "import-modules": "^3.1.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "node-fetch": "^2.6.7",
+    "nx": "14.7.3",
     "prettier": "^2.6.2",
-    "typescript": "~4.7.2"
+    "superjson": "^1.9.1",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.7.2",
+    "yup": "^0.32.11"
   },
   "workspaces": [
     "packages/**"
-  ]
+  ],
+  "dependencies": {
+    "tslib": "^2.3.0"
+  }
 }
